<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football Predict Game</string>
    <string name="copyright">Copyrights 2014, Sandeep Fatangare</string>
    <string name="splashscreen_desc">Logo</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="prompt_user">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="login_button">Login</string>
    <string name="signin">New User? Sign In</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="mobile">Mobile Number</string>
    <string name="pwd">Password</string>
    <string name="repwd">Retype Password</string>
    <string name="email">Email</string>
    <string name="register">Register User</string>
    <string name="submit">Submit</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="city">City</string>
    <string name="updateprofile">Update Profile</string>
    <string name="oldpwd">Old Password</string>
    <string name="changepwd">Change Password</string>
    <string name="title_alert_error">Error</string>
    <string name="err_no_connection">Please check your internet connection!</string>
    <string name="err_time_out">Connection timed out, try again!</string>
    <string name="err_access_denied">Access denied, check connection setting!</string>
    <string name="err_subscription_expired">Subscription expired, contact support team!</string>
    <string name="err_bad_data">Bad data, contact support team!</string>
    <string name="err_server">Server error, contact support team!</string>
    <string name="err_unknown">Unknown error, contact support team!</string>
    <string name="error_invalid_login">Login failed, try again!</string>
    <string name="error_invalid_phone">This mobile number is invalid</string>
    <string name="error_invalid_email">This email is invalid.</string>
    <string name="error_pwd_mismatch">Passwords are not matching.</string>
    <string name="error_field_space">This field contains space.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_invalid_groupowner">Access denied! You should be group-owner to edit the group.</string>
    <string name="error_failed_savegroup">Saving group details failed, try again!.</string>
    <string name="progress_login">Authenticating &#8230;</string>
    <string name="progress_register">Registering &#8230;</string>
    <string name="progress_send">Sending &#8230;</string>
    <string name="progress_history">Loading History &#8230;</string>
    <string name="progress_groupusers">Loading Members &#8230;</string>
    <string name="progress_groups">Loading Groups &#8230;</string>
    <string name="progress_group">Saving Group &#8230;</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_item_hello">HELLO</string>
    <string name="drawer_item_bets">PREDICTIONS</string>
    <string name="drawer_item_history">History</string>
    <string name="drawer_item_rules">Rules</string>
    <string name="drawer_item_groups">GROUPS</string>
    <string name="drawer_item_addgroup">Add New Group</string>
    <string name="drawer_item_viewallgroups">View All Groups</string>
    <string name="drawer_item_profile">PROFILE</string>
    <string name="drawer_item_editprofile">Edit Profile</string>
    <string name="drawer_item_changepwd">Change Password</string>
    <string name="drawer_item_logout">Logout</string>    
	<string name="setasfav">Set As Favorite</string>	    
	<string name="addgroup">Add Group</string>
<string name="editgroup">Edit Group</string>
<string name="name">Name</string>
</resources>
