<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordFragment" >

 
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"   
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#404040"
     >
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.45"
        android:weightSum="1"
        android:background="#C0C0C0"
        android:padding="10dp"
         >

        <EditText
            android:id="@+id/txtOldPwd"
            android:layout_width="match_parent"
            android:layout_weight="0.33"
            android:layout_height="0dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/oldpwd"
            android:singleLine="true" 
            android:layout_marginBottom="10dp"/>
        
        <EditText
            android:id="@+id/txtPwd"
            android:layout_width="match_parent"
            android:layout_weight="0.33"
            android:layout_height="0dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/pwd"
            android:singleLine="true" 
            android:layout_marginBottom="10dp"/>
        
        <EditText
            android:id="@+id/txtRePwd"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_weight="0.33"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:hint="@string/repwd"
            android:singleLine="true"
            android:padding="10dp" />
	</LinearLayout>

    <Button
        android:id="@+id/btnChangePwd"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.10"
        android:background="@drawable/roundbutton"
        android:onClick="onChangePwdClicked"
        android:padding="10dp"
        android:text="@string/changepwd" />

</LinearLayout>

</FrameLayout>
