<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"   
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#404040"
     >
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.35"
        android:weightSum="1"
        android:background="#C0C0C0"
        android:padding="10dp"
         >
         
        <EditText
            android:id="@+id/txtMobile"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:singleLine="true"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
             />

        <EditText
            android:id="@+id/txtEmail"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_weight="0.50"
            android:layout_height="0dp"
            android:singleLine="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />
    
	</LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="0.10"
        android:background="@drawable/roundbutton"
        android:onClick="onSubmitClicked"
        android:padding="10dp"
        android:text="@string/submit" />

</LinearLayout>
